# bq25730-rs

./: Cargo.toml  PLAN.md  README.md  bq25730_driver_plan.md  example-stm32g4  lefthook.yml
docs/: bq25730.md
examples/stm32g0/: Cargo.toml  README.md
examples/stm32g0/src/: main.rs
examples/stm32g031_bq25730/: Cargo.toml
examples/stm32g031_bq25730/src/: main.rs
examples/stm32g4/: Cargo.toml
examples/stm32g4/src/: main.rs
src/: data_types.rs  errors.rs  lib.rs  registers.rs
tests/: basic.rs  binrw_support.rs  charge_control.rs  common.rs  init_and_basic.rs  input_power_management.rs  integration_test.rs  option_registers.rs  otg_control.rs  status_and_adc.rs
