[package]
name = "bq25730-async-rs"
version = "0.0.0"
authors = ["Ivan Li <ivanli2048@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A BQ25730 driver based on embedded-hal. Support `async` and `sync` features."
keywords = [
  "battery-management",
  "embedded-hal-driver",
  "no-std",
  "bq25730",
  "async",
]
repository = "https://github.com/IvanLi-CN/bq25730-async-rs"

[dependencies]
embedded-hal = { version = "1.0.0", default-features = false } # Keep 1.0.0 as it's the latest stable
embedded-hal-async = { version = "1.0.0", optional = true, default-features = false } # Keep 1.0.0 as it's the latest stable
maybe-async-cfg = "0.2.5"
heapless = "0.8"                                            # Add heapless dependency
defmt = { version = "1.0.1", optional = true }              # Add def
binrw = { version = "0.15.0", default-features = false, optional = true }
bitflags = "2.9"

[dev-dependencies]
embedded-hal-mock = "0.11"

[lib]
path = "src/lib.rs"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = 0

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 'z'
overflow-checks = false

[features]
async = ["dep:embedded-hal-async"]
defmt = ["dep:defmt"]
binrw = ["dep:binrw"]
std = ["binrw/std"]


[dev-dependencies.bq25730-async-rs]
path = "."